service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: springboothello
spec:
  type: Loadbalancer
  selector:
    app: springboothello
  ports:
  - name: http
    port: 8080
    targetPort: 8080
